[gd_scene load_steps=4 format=3 uid="uid://c20bjir8loil8"]

[ext_resource type="Script" uid="uid://beukliuqh18c5" path="res://screens/jumpscare.gd" id="1_n27ll"]
[ext_resource type="AudioStream" uid="uid://b3klxmkb1lldy" path="res://audio/wraithSounds/Jumpscare.ogg" id="2_v067x"]
[ext_resource type="Texture2D" uid="uid://cqhkaqomdof62" path="res://images/enemy.png" id="3_n27ll"]

[node name="Jumpscare" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_n27ll")

[node name="JumpscareNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_v067x")
volume_db = -5.316
autoplay = true

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(12, 8)
color = Color(1, 0, 0, 1)

[node name="JumpscarePlaceholder" type="Sprite2D" parent="."]
position = Vector2(337, 210)
scale = Vector2(0.589178, 0.58175)
texture = ExtResource("3_n27ll")

[node name="ScareTime" type="Timer" parent="."]
wait_time = 2.25
one_shot = true

[connection signal="timeout" from="ScareTime" to="." method="_scene_swap"]
